// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login h5 suc 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "token",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": null,
    },
  ],
}
`;

exports[`login h5 suc 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "code",
    ],
    Array [
      "state",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": "test-code",
    },
    Object {
      "type": "return",
      "value": "test-state",
    },
  ],
}
`;

exports[`login h5 suc 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": Object {
          "code": "test-code",
          "state": "test-state",
          "url": "https://test.com/path?a=b",
        },
        "method": "post",
        "url": "/m-api/wechat-oa/login",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`login h5 suc 4`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "token",
      "test-token",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`login h5 suc 5`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "url": "/path?a=b",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
